# reports-gen

./: .gitignore  back_page_template.py  content_template.py  disclaimer_template.py  first_page_template.py  generate_report.py  generate_report_original_backup.py  minimal_test.py  pyproject.toml  reports-gen  v2_first_page_template.py  weasy_generate_report.py
Tickers/AZEK/Initiating/: AZEK_config.yaml
Tickers/AZEK/Initiation/: AZEK_config.yaml
Tickers/AZEK/Update/: AZEK_updateconfig.yaml
Tickers/AZEK/Updates/: AZEK_updateconfig.yaml
Tickers/FFIV/Initiating/: FFIV_config.yaml
Tickers/FFIV/Update/: FFIV_updateconfig.yaml
Tickers/HRI/Initiating/: HRI_config.yaml
Tickers/HRI/Update/: HRI_updateconfig.yaml
Tickers/IRTC/Initiating/: IRTC_config.yaml
Tickers/IRTC/Update/: IRTC_updateconfig.yaml
Tickers/RMD/: RMD_config.yaml
Tickers/RMD/Initiating/: generate_report.py
Tickers/RMD/Initiation/: RMD_config.yaml
Tickers/ZBRA/Initiating/: ZBRA_config.yaml  ZBRA_config.yaml.backup
Tickers/ZBRA/Initiating/images/: image24.emf
Tickers/ZBRA/Initiation/: ZBRA_config.yaml
Tickers/ZBRA/Update/: ZBRA_updateconfig.yaml  ZBRA_updateconfig.yaml.backup
Tickers/ZBRA/Updates/: ZBRA_updateconfig.yaml
scripts/: add_ticker.sh  create_base_template.py  create_config.py  docx_to_markdown.py
src/: __init__.py  docx_to_markdown.py  generate_report.py  process_ticker.py
src/templates/: report.css  report.html  update.css  update.html
templates/: report.css  report.html
templates_backup/: report_original_backup.css  report_original_backup.html
