[project]
name = "reports-gen"
version = "0.1.0"
description = "Google Slides Report Generator - Convert markdown to professional financial reports"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-auth>=2.23.0",
    "google-auth-oauthlib>=1.1.0",
    "google-auth-httplib2>=0.1.1",
    "google-api-python-client>=2.100.0",
    "markdown>=3.5.0",
    "pyyaml>=6.0.1",
    "click>=8.1.0",
    "pathlib>=1.0.1",
    "python-frontmatter>=1.1.0",
    "reportlab>=4.4.4",
    "pillow>=12.0.0",
    "pandoc>=2.4",
    "pypandoc>=1.11",
    "requests>=2.32.5",
    "weasyprint>=62.0",
    "jinja2>=3.1.4",
    "pymupdf>=1.26.5",
]
